# filter-evolution

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REFACTORING_SUMMARY.md  best_filter.cir  demo_comparison.sh
data/: harmonics.csv
src/: evolution.cpp  evolution.h  fitness.cpp  fitness.h  genome.cpp  genome.h  main.cpp  spice_interface.cpp  spice_interface.h
